Fix calendar conflict with twentyfifteen theme in 4.3 update

--- a/groupcalendar/group_calendar.css
+++ b/groupcalendar/group_calendar.css
@@ -33,7 +33,7 @@ table.calendar-view {
 }
 
 table.calendar-view td.cal-left {
-    width: 10%;
+    width: 300px;
     vertical-align: middle;
 }
 
